--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             padding: 25px;
             background: #f7fafc;
             border-radius: 12px;
-            border-left: 4px solid #667eea;
+            border-left: 4px solid #333333;
         }
 
         .project-item:last-child {
@@ -350,7 +350,7 @@
             </div>
             <div class="header-content">
                 <h1>👋 Hi, I'm a Data Scientist</h1>
-                <p class="tagline">I'm a data scientist constantly learning and building in my free time. I love building predictive models, working with AI/ML, data infrastructure, and the power industry. Always testing new tech and learning something new!<br><em>B.A. in Mathematics from DePauw University.</em></p>
+                <p class="tagline">I'm a data scientist constantly learning and building in my free time.<br>I love building predictive models, working with AI/ML, data infrastructure, and the power industry.<br>Always testing new tech and learning something new!<br><em>B.A. in Mathematics from DePauw University.</em></p>
                 <div class="social-links">
                     <a href="mailto:chapagainsapal@gmail.com" title="Email">
                         <i class="fas fa-envelope"></i>
@@ -582,10 +582,10 @@
 
             <div class="project-item">
                 <div class="project-title">
-                    <a href="https://medium.com/@yourprofile" class="project-link">Maven Analytics: Writer for Learning Data</a>
+                    <a href="https://medium.com/@chapagainsapal" class="project-link">Maven Analytics: Writer for Learning Data</a>
                 </div>
                 <div class="project-links">
-                    <a href="https://medium.com/@yourprofile" class="project-link">Medium Profile</a>
+                    <a href="https://medium.com/@chapagainsapal" class="project-link">Medium Profile</a>
                 </div>
                 <div class="project-description">Contributing data science articles and tutorials to help others learn analytics and data science concepts. Writing about real-world applications, best practices, and emerging trends in the field.</div>
                 <div class="project-metrics"><strong>Metrics:</strong> ~1000 monthly readers</div>
