updating to include github for ai webterminal

--- a/index.html
+++ b/index.html
@@ -557,10 +557,10 @@
 
             <div class="project-item">
                 <div class="project-title">
-                    <a href="https://aiwebterminal.onrender.com/" class="project-link">AI Web Terminal (Private Repo)</a>
+                    <a href="https://aiwebterminal.onrender.com/" class="project-link">AI Web Terminal</a>
                 </div>
                 <div class="project-links">
-                    <a href="https://github.com/SapalChap/AiWebTerminal" class="project-link">GitHub (Private)</a> | 
+                    <a href="https://github.com/SapalChap/AiWebTerminal" class="project-link">GitHub</a> | 
                     <a href="https://aiwebterminal.onrender.com/" class="project-link">Live Site</a>
                 </div>
                 <div class="project-description"><em>Work in progress.</em> An AI-powered web terminal that lets you use different GPTs like a Linux-based terminal—making AI interaction fast and intuitive.</div>
